FIX content overflow

--- a/src/scss/blocks/button.scss
+++ b/src/scss/blocks/button.scss
@@ -1,5 +1,7 @@
 .button {
   display: block;
+  min-height: 50px;
+  min-width: 100px;
   margin: 0;
   padding: 0;
 
