--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -112,8 +112,6 @@ $contacts__border-color: #484848;
 }
 
 .contacts__form-button {
-  width: 100px;
-  height: 50px;
   margin-left: 237px;
 
   font-weight: 900;
