--- a/src/scss/blocks/month-specials.scss
+++ b/src/scss/blocks/month-specials.scss
@@ -19,7 +19,6 @@
 .month-specials__offers-item {
   display: inline-block;
   width: 496px;
-  height: 248px;
 
   vertical-align: top;
 
@@ -38,7 +37,7 @@
   display: block;
   float: left;
   width: (496px / 2);
-  height: 248px;
+  min-height: 248px;
 
   clip-path: inset(0 0 0 0);
 
@@ -54,7 +53,7 @@
 .month-specials__offer-wrap {
   float: right;
   width: (496px / 2);
-  height: 248px;
+  min-height: 248px;
   padding-top: 62px;
 
   text-align: center;
@@ -131,7 +130,7 @@
   .month-specials__offers-item {
     display: block;
     width: 100%;
-    height: 248px * 2;
+    min-height: 248px * 2;
     padding: 0 5px;
   }
 
